# 8-Ball-Pool

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeListsInstructions.txt  CMakePresets.json  INSTRUCTIONS.md  README.md
include/billiard/core/: Version.hpp
main_app/: main.cpp
main_app/ENTITIES/: Entity.h  Game.cpp  Game.h  Table.cpp  Table.h
src/: main.cpp
src/core/: Version.cpp
